[package]
name = "rural"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
dotenv = "^0.15"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-async-std-native-tls"] }